--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = ">=3.8.0,<3.9"
 numpy = "^1.22.2"
 Flask = "^2.1.2"
 requests = "^2.27.1"
+waitress = "^2.1.2"
 
 [tool.poetry.dev-dependencies]
 
